<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cleaner.booster.phone.repairer.app.fragments.dashboard.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_tool"
        android:name="com.cleaner.booster.phone.repairer.app.fragments.tools.ToolsFragment"
        android:label="@string/title_tool"
        tools:layout="@layout/fragment_tool" />


    <fragment
        android:id="@+id/navigation_me"
        android:name="com.cleaner.booster.phone.repairer.app.fragments.me.AboutUsFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_setting" />
</navigation>