<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:elevation="5dp"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


            <TextView
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16sp"
                android:text="@string/exit_dialog"
                android:textColor="@color/standard_white"
                android:textSize="18sp"
                android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="20dp"
                android:text="@string/exit_text"
                 android:textSize="17sp"
                android:textStyle="normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:weightSum="3"
            android:orientation="horizontal">


            <Button
                android:id="@+id/yes"
                android:layout_marginBottom="10dp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_curved_ripple"
                 android:text="Yes"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/no"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/curved_white_ripple_sky_blue_bg_d"
                android:textColor="@color/standard_white"
                android:text="@string/no"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"

                android:textSize="15sp"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/rate"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/curved_white_ripple_sky_blue_bg_d"
                android:textColor="@color/standard_white"
                android:text="@string/rateus"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />



        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>