<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.mobile.app.information.my.android.activities.TermsAndConditions">

            <TextView
                android:id="@+id/textView80"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/P_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView45" />

            <TextView
                android:id="@+id/textView77"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/p_info"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tAndC" />

            <CheckBox
                android:id="@+id/tAndCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/accepting"
                android:buttonTint="@color/checkbox_selector"
                 app:layout_constraintBottom_toTopOf="@+id/acceptBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView80" />

            <Button
                android:id="@+id/declineBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/white_ripple_sky_blue_bg_d"
                android:text="Decline"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/acceptBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/acceptBtn" />

            <Button
                android:id="@+id/acceptBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="right"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/white_ripple_sky_blue_bg_d"
                android:text="Accept"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/declineBtn" />

            <ImageView
                android:id="@+id/tAndCLogoIv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_luncher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tAndC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Terms And Conditions"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tAndCLogoIv"
                app:layout_constraintStart_toStartOf="@+id/tAndCLogoIv"
                app:layout_constraintTop_toBottomOf="@+id/tAndCLogoIv" />

            <ImageView
                android:id="@+id/imageView43"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/imageView46"
                app:layout_constraintTop_toBottomOf="@+id/imageView46"
                app:srcCompat="@drawable/ic_contact" />

            <ImageView
                android:id="@+id/imageView44"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView77"
                app:srcCompat="@drawable/ic_state" />

            <ImageView
                android:id="@+id/imageView45"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="@+id/imageView43"
                app:layout_constraintTop_toBottomOf="@+id/imageView43"
                app:srcCompat="@drawable/ic_baseline_storage" />

            <ImageView
                android:id="@+id/imageView46"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/imageView44"
                app:layout_constraintTop_toBottomOf="@+id/imageView44"
                app:srcCompat="@drawable/ic_wifi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Phone state permission"
                android:textColor="#cc000000"
                app:layout_constraintBottom_toBottomOf="@+id/imageView44"
                app:layout_constraintStart_toEndOf="@+id/imageView44"
                app:layout_constraintTop_toTopOf="@+id/imageView44" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Contact permission"
                android:textColor="#cc000000"
                app:layout_constraintBottom_toBottomOf="@+id/imageView43"
                app:layout_constraintStart_toEndOf="@+id/imageView43"
                app:layout_constraintTop_toTopOf="@+id/imageView43" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Storage permission"
                android:textColor="#cc000000"
                app:layout_constraintBottom_toBottomOf="@+id/imageView45"
                app:layout_constraintStart_toEndOf="@+id/imageView45"
                app:layout_constraintTop_toBottomOf="@+id/imageView43" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Wifi state permission"
                android:textColor="#cc000000"
                app:layout_constraintBottom_toBottomOf="@+id/imageView46"
                app:layout_constraintStart_toEndOf="@+id/imageView46"
                app:layout_constraintTop_toBottomOf="@+id/imageView44" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>